--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Onion -- Programmer's life
-tagline: Onion
+title : Onion
+tagline: Programmer's life
 author :
   name : Fly
   email : fly@onion.im
